src/styles/global.scss
@use './tokens';
@use './mixins' as *;

* {
  box-sizing: border-box;
}

html {
  height: 100%;
  scrollbar-gutter: stable;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  margin: 0;
  padding: 0;
  font-family:
    Inter,
    system-ui,
    -apple-system,
    Segoe UI,
    Roboto,
    Arial,
    sans-serif;
  color: var(--text);
  overflow-x: hidden;
  overflow-y: auto;

  @media (max-width: 1024px) {
    -webkit-overflow-scrolling: touch; // інерційний скрол на iOS

    // Chrome, Edge, Safari
    &::-webkit-scrollbar {
      display: none;
    }

    // Firefox
    scrollbar-width: none;

    // Старий Edge / IE
    -ms-overflow-style: none;
  }
}

html.no-scroll,
body.no-scroll {
  overflow: hidden !important;
}

a {
  color: inherit;
  text-decoration: none;
}
button {
  font-family: inherit;
}

h1 {
  font-family:
    'DM Serif Display',
    Inter,
    system-ui,
    -apple-system,
    Segoe UI,
    Roboto,
    Arial,
    sans-serif;
  font-weight: 400;
  font-size: 56px;
  line-height: 0.98;
  letter-spacing: -0.02em;
  text-transform: none;
  margin: 0;

  @include tablet-sm {
    font-size: 72px;
  }
  @include tablet-lg {
    font-size: 92px;
  }
  @include desktop {
    font-size: 104px;
  }
  @include desktop-up {
    font-size: 112px;
  }
}

h2 {
  font-family:
    'DM Serif Display',
    Inter,
    system-ui,
    -apple-system,
    Segoe UI,
    Roboto,
    Arial,
    sans-serif;
  font-weight: 400;
  letter-spacing: -0.015em;
  line-height: 1.05;
  font-size: 38px;
  color: var(--text);
  margin: 0;

  @include tablet-sm {
    font-size: 46px;
  }
  @include tablet-lg {
    font-size: 56px;
  }
  @include desktop {
    font-size: 60px;
  }
  @include desktop-up {
    font-size: 72px;
  }
}

section {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  margin: 0;
  padding: 0;

  background: radial-gradient(150% 50% at 15% 0%, var(--bg-2), var(--bg));
}

.container {
  display: flex;
  padding-block: 34px;

  @include tablet-sm {
    padding-block: 46px;
  }

  @include tablet-lg {
    padding-block: 58px;
  }

  @include desktop {
    padding-block: 72px;
  }

  @include desktop-up {
    padding-block: 88px;
  }

  @include content-space-inline;
}

.card {
  background: var(--card);
  border: 1px solid var(--border);
  border-radius: var(--radius-lg);
  box-shadow: var(--shadow);
}

.small {
  font-size: 14px;
  color: var(--muted);
}

.muted {
  color: var(--muted);
}

// Smooth anchor scroll
html {
  scroll-behavior: smooth;
}

// Utility
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

